  forbidden to override these deprecated methods in a derived class. Please use
  the new names immediately if you need to override them.

Fixed bugs (FG#.. -> framagit bugs; FG!.. -> framagit merge requests):
 - GH#31: [MC] please provide an option to make MPI_Send asynchronous
 - GH#305: Unscheduled tasks are still excuted
 - FG!19: Removing RngStream

----------------------------------------------------------------------------

SimGrid (3.24) October 9. 2019

The Clean Disk Release.

S4U:
 - Introduce a s4u::Disk interface to manage the newly introduced <disk>
   tag. s4u::Disk is called to supplant s4u::Storage in a near future. It
   thus becomes the default resource to execute I/O operations. Examples
   and the file system plugin have been modified to use disks instead of
   storage elements. Storage can still be used but is doomed to disappear.
   Users are thus adviced to update their simulators accordingly.
 - Barrier::wait returns SG_BARRIER_SERIAL_THREAD for (only) one actor
   for consistency with pthread_barrier_wait()
 - Host::get_englobing_zone() returns the englobing netzone
 - Actor::on_destruction is now called in the destructor
   Actor::on_termination new signal called when the actor terminates
   its code.
 - Global signals are now part of the Engine:
   - on_platform_creation: after config settings, before the XML parsing
   - on_platform_created: right after the XML parsing
   - on_time_advance: each time the clock advances
   - on_simulation_end: after simulation, before cleanups
   - on_deadlock: as the name implies.
 - C bindings:
   - sg_{actor,host,link}_{data,data_set}() now all exist.
     Use them to attach user data to the object and retrieve it.

Models:
 - Introduce an experimental Wifi model. It sounds reasonable
   according to the state of the art, but it still has to be properly
   validated, at least against ns-3 if not against reality.
 - Improved the usability of ns-3. Several bugs were ironed out.